versions/3.2.0/docs/SubtaskPartialUpdate.md
# SubtaskPartialUpdate

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**kwargs** | **dict(str, str)** |  | [optional] 
**graph_layout** | **dict(str, str)** |  | [optional] 
**trigger** | **str** |  | [optional] 
**name** | **str** |  | [optional] 
**noop_dont_save** | **bool** |  | [optional] 
**no_concurrency** | **bool** |  | [optional] 
**timeout** | **int** |  | [optional] 
**log_variable** | **bool** |  | [optional] 
**task** | **str** |  | [optional] 
**condition_variable** | **str** |  | [optional] 
**condition_value** | **str** |  | [optional] 
**sync** | **bool** |  | [optional] 
**parent** | **int** |  | [optional] 
**relative_to** | **int** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


